// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`audio param methods with update multiple setValueAtTime 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 0,
      },
      "inputs": [],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`audio param methods with update overides setValueAtTime 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 1,
      },
      "inputs": [],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`audio param methods with update setValueAtTime with exponentialRampToValueAtTime 1`] = `
{
  "inputs": [
    {
      "detune": {
        "inputs": [],
        "value": 0,
      },
      "frequency": {
        "inputs": [],
        "value": 440,
      },
      "inputs": [],
      "name": "OscillatorNode",
      "type": "sine",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`audio param methods with update setValueAtTime with linearRampToValueAtTime 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 0,
      },
      "inputs": [],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`audio param methods with update setValueAtTime with setTargetAtTime 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 0,
      },
      "inputs": [],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`audio param methods with update setValueAtTime with setValueCurveAtTime 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 0,
      },
      "inputs": [],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`audio param methods with update single setValueAtTime 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 1,
      },
      "inputs": [],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;
